<resources>
    <string name="app_name">FitTimer</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_play_session">Session</string>
    <string name="pose_name_label">Pose name</string>
    <string name="pose_duration_seconds">Pose duration (seconds)</string>
    <string name="default_pose_duration">45</string>
    <string name="add_pose_button">Add</string>
    <string name="create_session_button">Create</string>
    <string name="get_ready">Get ready…</string>
    <string name="session_name_label">Session title</string>
    <string name="add_item_here">Pose name…</string>
    <string name="set_duration">Set duration</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="duration_dialog_title">Pose Duration</string>
    <string name="sec">sec</string>
    <string name="default_sec">45</string>
    <string name="time_separator">:</string>
    <string name="min">min</string>
    <string name="delete_icon">Continue swiping to delete</string>
    <string name="drag_from_here">Drag from here</string>
    <string name="title_activity_create_session">Create Session</string>
</resources>
